[tool.poetry]
name = "kv"
version = "0.1.0"
description = ""
authors = ["Hasanat Kazmi <hasanatkazmi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
